# smart-reader

./: .env.example  .gitignore  CODE_WIKI.md  README.md  TIER1_MIGRATION.md  agent-browser.json  docker-compose.yml  drizzle.config.ts  metadata.json  next.config.ts  package-lock.json  package.json  register.json  test_full_v2.py  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
docs/brainstorm/: graph-density-mockup.html
python-parser/: .env.example  Dockerfile  README.md  _inspect_pdf.py  pyproject.toml  requirements.txt  run.py
python-parser/app/: config.py  db.py  llm.py  main.py  models.py  schemas.py  storage.py
python-parser/app/graph/: state.py  workflow.py
python-parser/app/graph/nodes/: build_edges.py  cluster.py  enrich.py  extract_concepts.py  extract_sections.py  extract_skeleton.py  pagerank.py  resolve_entities.py  split_sentences.py
python-parser/app/parsers/: __init__.py  docx_parser.py  image_extractor.py  pdf_parser.py  url_resolver.py
python-parser/app/routers/: health.py  jobs.py  kg.py  parse.py
python-parser/app/services/: ingest_service.py
python-parser/app/utils/: html_utils.py  sentence_split.py  text_utils.py
python-parser/smart_reader_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: i18n.ts  middleware.ts
src/api/: document.ts  organization.ts  project.ts  versions.ts
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
src/components/: I18nHydrationGate.tsx  LoadingScreen.tsx  SiteHeader.tsx  UserMenu.tsx
src/db/: schema.ts
src/hooks/: useIngestionFlow.ts
(+170 files in other folders)
