[project]
name = "smart-reader-parser"
version = "0.1.0"
description = "Python FastAPI 解析服务：PDF/DOCX 解析 + KG 管线"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # 配置与类型
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # 数据库（共用 Neon PostgreSQL）
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.35",
    # HTTP 客户端（arxiv/github URL 解析）
    "httpx>=0.27.0",
    # R2 存储（S3 兼容）
    "boto3>=1.35.0",
    # PDF 解析（PyMuPDF）
    "PyMuPDF>=1.24.10",
    # DOCX 解析
    "python-docx>=1.1.2",
    # 图片处理
    "Pillow>=10.4.0",
    # LLM 编排
    "openai>=1.50.0",
    # 图算法（PageRank 等）
    "networkx>=3.3",
    # 重试
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
